--- a/Client/res/fxml/lobby/gameentry.fxml
+++ b/Client/res/fxml/lobby/gameentry.fxml
@@ -6,7 +6,7 @@
 
 
 <AnchorPane fx:id="parent" prefHeight="50.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/10.0.2-internal"
-            xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.fxcontroller.lobby.Game">
+            xmlns:fx="http://javafx.com/fxml/1" >
     <Text fx:id="gameNameField" layoutX="14.0" layoutY="18.0" strokeType="OUTSIDE" strokeWidth="0.0"
           style="-fx-font-weight: bold;" text="Name"/>
     <Text fx:id="creatorNameField" layoutX="15.0" layoutY="41.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Creator"/>
