--- a/Client/res/fxml/lobby/lobby.fxml
+++ b/Client/res/fxml/lobby/lobby.fxml
@@ -4,11 +4,11 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="600.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.fxcontroller.lobby.Lobby">
+<AnchorPane prefHeight="600.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" >
    <ScrollPane prefHeight="550.0" prefWidth="400.0">
       <VBox fx:id="gameContainer"/>
    </ScrollPane>
    <Button layoutX="302.0" layoutY="555.0" mnemonicParsing="false" onAction="#joinNewGame" text="Create game" />
-   <TextField fx:id="gameNameField" layoutX="14.0" layoutY="555.0" prefHeight="25.0" prefWidth="285.0" promptText="Enter name of new game" />
+   <TextField fx:id="gameNameField" layoutX="14.0" layoutY="555.0" prefHeight="25.0" prefWidth="285.0" promptText="Enter name of new game" onAction="#joinNewGame" />
    <Text fill="RED" layoutX="14.0" layoutY="593.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Enter a name to create a new game" />
 </AnchorPane>
