--- a/Client/res/fxml/signup.fxml
+++ b/Client/res/fxml/signup.fxml
@@ -5,9 +5,9 @@
 <?import javafx.scene.text.*?>
 
 <AnchorPane prefHeight="65.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/10.0.2-internal"
-            xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.fxcontroller.Signup">
+            xmlns:fx="http://javafx.com/fxml/1" >
    <TextField fx:id="usernameField" layoutX="15.0" layoutY="15.0" prefHeight="25.0" prefWidth="210.0"
-              promptText="Your username" style="-fx-border-radius: 10px 0px 0px 10px;"/>
+              promptText="Your username" style="-fx-border-radius: 10px 0px 0px 10px;" onAction="#signup" />
    <Button layoutX="226.0" layoutY="15.0" mnemonicParsing="false" onAction="#signup"
            style="-fx-border-radius: 10px 0px 0px 10px;" text="Sign-Up"/>
    <Text fx:id="errField" fill="RED" layoutX="15.0" layoutY="52.0" strokeType="OUTSIDE" strokeWidth="0.0"
