--- a/Client/res/fxml/signup.fxml
+++ b/Client/res/fxml/signup.fxml
@@ -4,12 +4,10 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="65.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/10.0.2-internal"
-            xmlns:fx="http://javafx.com/fxml/1" >
-   <TextField fx:id="usernameField" layoutX="15.0" layoutY="15.0" prefHeight="25.0" prefWidth="210.0"
-              promptText="Your username" style="-fx-border-radius: 10px 0px 0px 10px;" onAction="#signup" />
-   <Button layoutX="226.0" layoutY="15.0" mnemonicParsing="false" onAction="#signup"
-           style="-fx-border-radius: 10px 0px 0px 10px;" text="Sign-Up" focusTraversable="false" />
-   <Text fx:id="errField" fill="RED" layoutX="15.0" layoutY="52.0" strokeType="OUTSIDE" strokeWidth="0.0"
-         text="Please enter a username."/>
+<AnchorPane prefHeight="120.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1">
+   <TextField fx:id="serverIPField" layoutX="15.0" layoutY="25.0" prefHeight="25.0" prefWidth="210.0" promptText="Server IP" />
+   <TextField fx:id="serverPortField" layoutX="226.0" layoutY="25.0" prefHeight="25.0" prefWidth="65" promptText="Port" />
+   <TextField fx:id="usernameField" layoutX="15.0" layoutY="70.0" onAction="#signup" prefHeight="25.0" prefWidth="210.0" promptText="Your username" />
+   <Button focusTraversable="false" layoutX="226.0" layoutY="70.0" mnemonicParsing="false" onAction="#signup" text="Sign-Up" />
+   <Text fx:id="errField" fill="RED" layoutX="15.0" layoutY="110.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Please enter a username." />
 </AnchorPane>
