--- a/Client/res/fxml/signup.fxml
+++ b/Client/res/fxml/signup.fxml
@@ -5,8 +5,8 @@
 <?import javafx.scene.text.*?>
 
 <AnchorPane prefHeight="120.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1">
-   <TextField fx:id="serverIPField" layoutX="15.0" layoutY="25.0" prefHeight="25.0" prefWidth="210.0" promptText="Server IP" />
-   <TextField fx:id="serverPortField" layoutX="226.0" layoutY="25.0" prefHeight="25.0" prefWidth="65" promptText="Port" />
+   <TextField fx:id="serverIPField" layoutX="15.0" layoutY="25.0" prefHeight="25.0" prefWidth="210.0" promptText="Server IP" text="127.0.0.1" />
+   <TextField fx:id="serverPortField" layoutX="226.0" layoutY="25.0" prefHeight="25.0" prefWidth="65" promptText="Port" text="80" />
    <TextField fx:id="usernameField" layoutX="15.0" layoutY="70.0" onAction="#signup" prefHeight="25.0" prefWidth="210.0" promptText="Your username" />
    <Button focusTraversable="false" layoutX="226.0" layoutY="70.0" mnemonicParsing="false" onAction="#signup" text="Sign-Up" />
    <Text fx:id="errField" fill="RED" layoutX="15.0" layoutY="110.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Please enter a username." />
