--- a/Client/res/fxml/signup.fxml
+++ b/Client/res/fxml/signup.fxml
@@ -9,5 +9,5 @@
    <TextField fx:id="serverPortField" layoutX="226.0" layoutY="25.0" prefHeight="25.0" prefWidth="65" promptText="Port" text="80" />
    <TextField fx:id="usernameField" layoutX="15.0" layoutY="70.0" onAction="#signup" prefHeight="25.0" prefWidth="210.0" promptText="Your username" />
    <Button focusTraversable="false" layoutX="226.0" layoutY="70.0" mnemonicParsing="false" onAction="#signup" text="Sign-Up" />
-   <Text fx:id="errField" fill="RED" layoutX="15.0" layoutY="110.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Please enter a username." />
+   <Text fx:id="errField" fill="RED" layoutX="15.0" layoutY="110.0" strokeType="OUTSIDE" strokeWidth="0.0" />
 </AnchorPane>
